# Task_and_Habit_Tracker_API

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/core/: auth.py  config.py  database.py
app/models/: __init__.py  habit.py  task.py  user.py
app/schemas/: __init__.py  schemas.py  task.py  token.py  users.py  workspace.py
